# PasswordManagerGUI

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md
Project/: CMakeLists.txt  PasswordManagerGUI.sln  PasswordManagerGUI.vcxproj  PasswordManagerGUI.vcxproj.filters  build_win32.bat  generate_visual_studio_project_with_cmake.bat
Project/source_code/: main.cpp
Project/source_code/core/: application_data.hpp  application_functional.cpp  application_functional.hpp
Project/source_code/framework/: application.hpp
Project/source_code/ui/: CommonUIComponent.hpp  FileEncryptionUI.inl  PasswordEncryptionUI.inl  PasswordManagerGUI.hpp  UIActions.inl  imgui_layout.inl
Project/source_code/utility/: async_tool.hpp  logger.hpp  raii_tool.hpp
docs/: README.md  architecture.en.md  architecture.md  engineering-paper.en.md  engineering-paper.md
